Add seller dashboard functionality and refactor sales data handling